// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedInput matches snapshot on undefined value 1`] = `
<div
  class="formatted-input"
>
  <div
    class="bp4-input-group"
  >
    <input
      class="bp4-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`FormattedInput matches snapshot with escaped value 1`] = `
<div
  class="formatted-input"
>
  <div
    class="bp4-input-group"
  >
    <input
      class="bp4-input"
      type="text"
      value="Here are some chars \\\\t\\\\r\\\\n lol"
    />
  </div>
</div>
`;

exports[`FormattedInput matches works with multiline 1`] = `
<div
  class="formatted-input"
>
  <textarea
    class="bp4-input"
  >
    Here are some chars \\t\\r\\n lol
  </textarea>
</div>
`;
